# ChangeLog for perl-core/Storable
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Storable/ChangeLog,v 1.29 2009/03/13 21:45:59 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Storable-2.07-r1.ebuild,
  -Storable-2.15.ebuild:
  Cleanup

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> Storable-2.18.ebuild:
  alpha/ia64/sparc/x86 stable

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> Storable-2.18.ebuild:
  keyword ~sparc-fbsd

  01 Jun 2008; Alexis Ballier <aballier@gentoo.org> Storable-2.18.ebuild:
  keyword ~x86-fbsd

*Storable-2.18 (21 May 2008)

  21 May 2008; Torsten Veller <tove@gentoo.org> +Storable-2.18.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Storable-2.16.ebuild:
  Stable for HPPA too.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> Storable-2.16.ebuild:
  Stable on mips.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Storable-2.16.ebuild:
  amd64 stable

  12 Aug 2007; Tom Gall <tgall@gentoo.org> Storable-2.16.ebuild:
  stable on ppc64

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Storable-2.16.ebuild:
  Stable on ppc.

  10 Jul 2007; Michael Cummings <mcummings@gentoo.org> Storable-2.16.ebuild:
  sparc stable

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> Storable-2.16.ebuild:
  alpha/ia64/x86 stable

*Storable-2.16 (16 Apr 2007)

  16 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +Storable-2.16.ebuild:
  Version bump

  25 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -Storable-2.13.ebuild:
  Cleaning up ebuilds

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Storable-2.07-r1.ebuild, Storable-2.13.ebuild, Storable-2.15.ebuild:
  Adding perl dep

  25 Feb 2006; Joshua Kinard <kumba@gentoo.org> Storable-2.15.ebuild:
  Marked stable on mips.

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  Storable-2.07-r1.ebuild:
  Virtuals for some perl-core deps
