@@ -1,6 +1,8 @@
 DIST Storable-2.16.tar.gz 173578 RMD160 9dbde6050ea53ac3ae7afc87dba7aedbf3e80dbf SHA1 5092feacbf591a56ed4fbfba089d528a8325897b SHA256 86a4d9be1b0b15db9fb0a4606fbdc16939e48d2a76267b61103336c3dbdd0727
 DIST Storable-2.18.tar.gz 177774 RMD160 d901c90b277d12a674ff270185228732d6b8278c SHA1 bb12091a69354670fd8b3c2f2704d4dbb10c2061 SHA256 99539bb999e391277ca3ef5985b9b7a7c504dfcc6bce38351ba22fba37fb2222
+DIST Storable-2.20.tar.gz 177889 RMD160 5ecdf7ab5a9a634e2e688718ef2da56ec2b34809 SHA1 c3de6c0ba576238b41af600b3f3ca8c46cdae219 SHA256 d0870bec8f7bafea8f1639802055736fa56ba00a4128cc7cad6d59a7211695b7
 EBUILD Storable-2.16.ebuild 566 RMD160 cca9cb31a1fa0a398d88594a8e04576c53c7bc46 SHA1 549bb7087e0f91c59e4455bcaa52d8de480df3da SHA256 2bf25802f65a2b6b3788f476951c14390e6a3f1c3b5a686a6d35328f573d3627
 EBUILD Storable-2.18.ebuild 595 RMD160 5767712f5ffbb2856e777e6ce80413e298619515 SHA1 a2d4fdfe1b36d7855cafd3d971b20a6d26be92c1 SHA256 43793c56fa72847683431daf51e6e1a6ab4576997f4fbbc7dace28d60e19008e
-MISC ChangeLog 7372 RMD160 f7a9edb56b5a8d21551720ff7bf427bf7603fc96 SHA1 b6ee1ca3f8ed0ae98f8080e0ccba4fa32f1d45a3 SHA256 b2118d795150982f613dc1e39fcbbfd101a801039d76c66eeb745c25dbafa1b7
+EBUILD Storable-2.20.ebuild 450 RMD160 4613215e33b48e5a291e316e40347e65fff1aee7 SHA1 49a880a9dcd2247107d0f3815a46049dc79035d3 SHA256 bf665d4bfa5bf515130f27400061fdffa25e83b47ae83329889a8f84fe9ce6cd
+MISC ChangeLog 7489 RMD160 7c32997cc271e71a0b6217031dbca6d86fe8c9b5 SHA1 5f747e3ec2e4c35078af06ae4470d9fcca5053de SHA256 0cdd2917ab62ef7471b50de48b92eae22548565c0989fb7496ba3e539cb01812
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
