@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Storable/Storable-2.20.ebuild,v 1.1 2009/05/19 05:16:20 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=AMS
+inherit perl-module
+
+DESCRIPTION="The Perl Storable Module"
+
+SLOT="0"
+KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+SRC_TEST="do"
