@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Storable
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Storable/ChangeLog,v 1.29 2009/03/13 21:45:59 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Storable/ChangeLog,v 1.30 2009/05/19 05:16:20 tove Exp $
+
+*Storable-2.20 (19 May 2009)
+
+  19 May 2009; Torsten Veller <tove@gentoo.org> +Storable-2.20.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org> -Storable-2.07-r1.ebuild,
   -Storable-2.15.ebuild:
